--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -16,7 +16,7 @@
 		<div class="row">
 			<div class="">
 				<header class="primary">
-					<h1><img src="images/PTZlogo.png" style="width:34%;padding-bottom:3px;"> OBS Controller</h1>
+					<h1><img src="images/PTZlogo.png" style="width:34%; min-width: 200px;padding-bottom:3px;"><br/> OBS Controller</h1>
 				</header>				<nav class="primary">
 					<ul>
 						<li>
