Cleanup indentation and apply labels

--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -27,7 +27,8 @@
                                     min-width: 200px;
                                     padding-bottom: 3px;
                                 "
-                            /><br />
+                            />
+                            <br />
                             OBS Controller
                         </h1>
                     </header>
@@ -39,8 +40,7 @@
                                     href="#"
                                     data-toggle="modal"
                                     data-target="#set_presets"
-                                    >Assign Presets</a
-                                >
+                                    >Assign Presets</a>
                             </li>
                             <li>
                                 <a
@@ -48,8 +48,7 @@
                                     href="#"
                                     data-toggle="modal"
                                     data-target="#cam_adjust_control_settings"
-                                    >Preferences</a
-                                >
+                                    >Preferences</a>
                             </li>
                         </ul>
                     </nav>
@@ -62,22 +61,31 @@
                                     class="call_preset preset_button preset-1"
                                     data-preset="1"
                                     href="#preset-1"
-                                    ><img src="images/presets/1.png" />1</a
                                 >
+                                    <img src="images/presets/1.png" />
+									<br/>
+                                    1 Lecturn
+                                </a>
                                 <a
                                     style="width: 112px; height: 90px"
                                     class="call_preset preset_button preset-2"
                                     data-preset="2"
                                     href="#preset-2"
-                                    ><img src="images/presets/2.png" />2</a
                                 >
+                                    <img src="images/presets/2.png" />
+									<br/>
+                                    2 W-Lecturn
+                                </a>
                                 <a
                                     style="width: 112px; height: 90px"
                                     class="call_preset preset_button preset-3"
                                     data-preset="3"
                                     href="#preset-3"
-                                    ><img src="images/presets/3.png" />3</a
                                 >
+                                    <img src="images/presets/3.png" />
+									<br/>
+                                    3 Table
+                                </a>
                             </div>
                             <div class="row">
                                 <a
@@ -85,25 +93,34 @@
                                     class="call_preset preset_button preset-4"
                                     data-preset="4"
                                     href="#preset-4"
-                                    ><img src="images/presets/4.png" />4</a
                                 >
+                                    <img src="images/presets/4.png" />
+									<br/>
+                                    4 Floor
+                                </a>
                                 <a
                                     style="width: 112px; height: 90px"
                                     class="call_preset preset_button preset-5"
                                     data-preset="5"
                                     href="#preset-5"
-                                    ><img src="images/presets/5.png" />5</a
                                 >
+                                    <img src="images/presets/5.png" />
+									<br/>
+                                    5 W-Floor
+                                </a>
                                 <a
                                     style="width: 112px; height: 90px"
                                     class="call_preset preset_button preset-6"
                                     data-preset="6"
                                     href="#preset-6"
-                                    ><img src="images/presets/6.png" />6</a
                                 >
+                                    <img src="images/presets/6.png" />
+									<br/>
+                                    6 Whole Auditorium
+                                </a>
                             </div>
                             <div class="row">
-                                <a href="#" class="autopan"></a>
+                                <a href="#" class="autopan"> </a>
                             </div>
                         </fieldset>
 
@@ -115,14 +132,16 @@
                                             class="toggle_button toggle-up toggle-zoom-in adjust_zoom"
                                             data-action="zoomin"
                                             href="#zoom"
-                                        ></a>
+                                        >
+                                        </a>
                                     </div>
                                     <div class="row">
                                         <a
                                             class="toggle_button toggle-down toggle-zoom-out adjust_zoom"
                                             data-action="zoomout"
                                             href="#zoom"
-                                        ></a>
+                                        >
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -134,14 +153,16 @@
                                             class="toggle_button toggle-up toggle-focus-in adjust_focus"
                                             data-action="focusin"
                                             href="#focus"
-                                        ></a>
+                                        >
+                                        </a>
                                     </div>
                                     <div class="row">
                                         <a
                                             class="toggle_button toggle-down toggle-focus-out adjust_focus"
                                             data-action="focusout"
                                             href="#focus"
-                                        ></a>
+                                        >
+                                        </a>
                                     </div>
                                 </div>
                             </div>
@@ -156,7 +177,8 @@
                                         class="pantilt-up pantilt_image adjust_pantilt"
                                         href="#pantilt"
                                         data-action="up"
-                                    ></a>
+                                    >
+                                    </a>
                                     <div
                                         class="pantilt_image pantilt-blank-top-right"
                                     ></div>
@@ -167,19 +189,22 @@
                                         class="pantilt-left pantilt_image adjust_pantilt"
                                         href="#pantilt"
                                         data-action="left"
-                                    ></a>
+                                    >
+                                    </a>
                                     <a
                                         id="pantilt-button-home"
                                         class="pantilt-home pantilt_image adjust_pantilt"
                                         href="#pantilt"
                                         data-action="home"
-                                    ></a>
+                                    >
+                                    </a>
                                     <a
                                         id="pantilt-button-right"
                                         class="pantilt-right pantilt_image adjust_pantilt"
                                         href="#pantilt"
                                         data-action="right"
-                                    ></a>
+                                    >
+                                    </a>
                                 </div>
                                 <div class="row">
                                     <div
@@ -190,7 +215,8 @@
                                         class="pantilt-down pantilt_image adjust_pantilt"
                                         href="#pantilt"
                                         data-action="down"
-                                    ></a>
+                                    >
+                                    </a>
                                     <div
                                         class="pantilt_image pantilt-blank-bottom-right"
                                     ></div>
