--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -63,8 +63,8 @@
                                     href="#preset-1"
                                 >
                                     <img src="images/presets/1.png" />
-									<br/>
-                                    1 Lecturn
+                                    <br />
+                                    1 Lectern
                                 </a>
                                 <a
                                     style="width: 112px; height: 90px"
@@ -73,8 +73,8 @@
                                     href="#preset-2"
                                 >
                                     <img src="images/presets/2.png" />
-									<br/>
-                                    2 W-Lecturn
+                                    <br />
+                                    2 W-Lectern
                                 </a>
                                 <a
                                     style="width: 112px; height: 90px"
