remove home button

--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -191,13 +191,7 @@
                                         data-action="left"
                                     >
                                     </a>
-                                    <a
-                                        id="pantilt-button-home"
-                                        class="pantilt-home pantilt_image adjust_pantilt"
-                                        href="#pantilt"
-                                        data-action="home"
-                                    >
-                                    </a>
+                                    <span class="pantilt_image">&nbsp;</span>
                                     <a
                                         id="pantilt-button-right"
                                         class="pantilt-right pantilt_image adjust_pantilt"
