--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -40,7 +40,8 @@
                                     href="#"
                                     data-toggle="modal"
                                     data-target="#set_presets"
-                                    >Assign Presets</a>
+                                    >Assign Presets</a
+                                >
                             </li>
                             <li>
                                 <a
@@ -48,7 +49,8 @@
                                     href="#"
                                     data-toggle="modal"
                                     data-target="#cam_adjust_control_settings"
-                                    >Preferences</a>
+                                    >Preferences</a
+                                >
                             </li>
                         </ul>
                     </nav>
@@ -83,7 +85,7 @@
                                     href="#preset-3"
                                 >
                                     <img src="images/presets/3.png" />
-									<br/>
+                                    <br />
                                     3 Table
                                 </a>
                             </div>
@@ -95,7 +97,7 @@
                                     href="#preset-4"
                                 >
                                     <img src="images/presets/4.png" />
-									<br/>
+                                    <br />
                                     4 Floor
                                 </a>
                                 <a
@@ -105,7 +107,7 @@
                                     href="#preset-5"
                                 >
                                     <img src="images/presets/5.png" />
-									<br/>
+                                    <br />
                                     5 W-Floor
                                 </a>
                                 <a
@@ -115,7 +117,7 @@
                                     href="#preset-6"
                                 >
                                     <img src="images/presets/6.png" />
-									<br/>
+                                    <br />
                                     6 Whole Auditorium
                                 </a>
                             </div>
