--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -66,7 +66,7 @@
                                 >
                                     <img src="images/presets/1.png" />
                                     <br />
-                                    1 Lectern
+                                    1. Lectern
                                 </a>
                                 <a
                                     style="width: 112px; height: 90px"
@@ -76,7 +76,7 @@
                                 >
                                     <img src="images/presets/2.png" />
                                     <br />
-                                    2 W-Lectern
+                                    2. W-Lectern
                                 </a>
                                 <a
                                     style="width: 112px; height: 90px"
@@ -86,7 +86,7 @@
                                 >
                                     <img src="images/presets/3.png" />
                                     <br />
-                                    3 Table
+                                    3. Table
                                 </a>
                             </div>
                             <div class="row">
@@ -98,7 +98,7 @@
                                 >
                                     <img src="images/presets/4.png" />
                                     <br />
-                                    4 Floor
+                                    4. Floor
                                 </a>
                                 <a
                                     style="width: 112px; height: 90px"
@@ -108,7 +108,7 @@
                                 >
                                     <img src="images/presets/5.png" />
                                     <br />
-                                    5 W-Floor
+                                    5. W-Floor
                                 </a>
                                 <a
                                     style="width: 112px; height: 90px"
@@ -118,7 +118,7 @@
                                 >
                                     <img src="images/presets/6.png" />
                                     <br />
-                                    6 Whole Auditorium
+                                    6. Whole Auditorium
                                 </a>
                             </div>
                             <div class="row">
