fix presets active clearing

--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -61,7 +61,7 @@
                                 <div class="col-sm">
                                     <a
                                         style="width: 112px; height: 90px"
-                                        class="call_preset preset_button preset-1"
+                      class="call_preset preset_button preset-1 preset_image"
                                         data-preset="1"
                                         href="#preset-1"
                                     >
@@ -73,7 +73,7 @@
                                 <div class="col-sm">
                                     <a
                                         style="width: 112px; height: 90px"
-                                        class="call_preset preset_button preset-2"
+                      class="call_preset preset_button preset-2 preset_image"
                                         data-preset="2"
                                         href="#preset-2"
                                     >
@@ -85,7 +85,7 @@
                                 <div class="col-sm">
                                     <a
                                         style="width: 112px; height: 90px"
-                                        class="call_preset preset_button preset-3"
+                      class="call_preset preset_button preset-3 preset_image"
                                         data-preset="3"
                                         href="#preset-3"
                                     >
@@ -98,7 +98,7 @@
                             <div class="row">
                                 <a
                                     style="width: 112px; height: 90px"
-                                    class="call_preset preset_button preset-4"
+                    class="call_preset preset_button preset-4 preset_image"
                                     data-preset="4"
                                     href="#preset-4"
                                 >
@@ -108,7 +108,7 @@
                                 </a>
                                 <a
                                     style="width: 112px; height: 90px"
-                                    class="call_preset preset_button preset-5"
+                    class="call_preset preset_button preset-5 preset_image"
                                     data-preset="5"
                                     href="#preset-5"
                                 >
@@ -118,7 +118,7 @@
                                 </a>
                                 <a
                                     style="width: 112px; height: 90px"
-                                    class="call_preset preset_button preset-6"
+                    class="call_preset preset_button preset-6 preset_image"
                                     data-preset="6"
                                     href="#preset-6"
                                 >
