make autopan visible or not configurable

--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -127,7 +127,7 @@
                                     6. Whole Auditorium
                                 </a>
                             </div>
-                            <div class="row">
+                            <div class="row" id="autopan">
                                 <div class="col-sm" style="position: relative">
                                     <a href="#" class="autopan"> </a>
                                 </div>
@@ -586,7 +586,10 @@
                                     <option value="120">2 Minutes</option>
                                 </select>
                             </div>
-                            <div class="col-xs-6"></div>
+                            <div class="col-xs-6">
+                                <label>Show Autopan</label>
+                                <input data-action="showautopan" id="showautopan" class="form-control change_setting" type="checkbox"></input>
+                            </div>
                         </div>
 
                         <div class="row">
