Update whole auditorium label to fit better

--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -124,7 +124,7 @@
                                 >
                                     <img src="images/presets/6.png" />
                                     <br />
-                                    6. Whole Auditorium
+                                    6. Auditorium
                                 </a>
                             </div>
                             <div class="row" id="autopan">
