--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -610,6 +610,17 @@
                                 </button>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <label>&nbsp;</label>
+                                <button
+                                    class="btn btn-default form-control do_reboot" type="button"
+                                >
+                                    Reboot Camera
+                                </button>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="modal-footer">
                         <button
