fix reload-camera-button rendering

--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -601,14 +601,18 @@
                                     id="cam_ip"
                                     value=""
                                 />
+                            </div>
                             <div class="col-xs-6">
                                 <label>&nbsp;</label>
                                 <button
-                                    class="btn btn-default form-control reload_cam"
+                                    class="btn btn-default form-control reload_cam" type="button"
                                 >
                                     Reload Camera
                                 </button>
                             </div>
+                        </div>
+                        <div class="row">
+                            
                         </div>
                         <div class="row">
                             <div class="col-xs-6">
