make the show-auto-pan-checkbox much smaller

--- a/controls/LARGE CONTROLLER.html
+++ b/controls/LARGE CONTROLLER.html
@@ -588,7 +588,7 @@
                             </div>
                             <div class="col-xs-6">
                                 <label>Show Autopan</label>
-                                <input data-action="showautopan" id="showautopan" class="form-control change_setting" type="checkbox"></input>
+                                <input data-action="showautopan" id="showautopan" class="form-control change_setting" style="width: 15px;" type="checkbox"></input>
                             </div>
                         </div>
 
